--- a/自述文件.md
+++ b/自述文件.md
@@ -1,3 +1,6 @@
+[English](README.md)|[简体中文](自述文件.md)|[繁體中文](繁體中文.md)|...
+--|--|--|--
+
 # brunch-grub2
 这个是用来双启动甚至多启动，那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安装在 非 chromebook 的 chromeOS。
 #### File Tree
