--- a/自述文件.md
+++ b/自述文件.md
@@ -2,7 +2,7 @@
 --|--|--|--
 
 # brunch-grub2
-这个是用来双启动甚至多启动，那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安装在 非 chromebook 的 chromeOS。
+这个是用来双启动,甚至多启动 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安装在 非 chromebook 的 chromeOS。
 #### 文件结构树状图
 <img src="README/brunch-grub2.png">
 
