--- a/繁體中文.md
+++ b/繁體中文.md
@@ -2,7 +2,7 @@
 --|--|--|--
 
 # brunch-grub2
-這個是用來雙啟動甚至多啟動，那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
+這個是用來雙啟動甚，至多啟動 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
 #### 文件結構樹狀圖
 <img src="README/brunch-grub2.png">
 
