--- a/自述文件.md
+++ b/自述文件.md
@@ -28,28 +28,110 @@
 </details>
 
 ### 已经安装好了
+#### 选择 case
 <details>
 <summary>🖱️点击展开查看🖱️</summary>
 
-#### 编辑 txt_grub.txt
-- 打开并编辑 `zip: EFI/brunch/txt_grub.txt` ；
+##### case.txt
+- 用文本编辑器打开 `zip: EFI/brunch/case.txt` ；
+<details>
+<summary>🖱️点击展开查看🖱️</summary>
 
-三选一|一类情况|二类情况|三类情况
---|--|--|--
-条件|{如果文件在该目录}|{如果文件在其他目录}|{其他}
-代码|txt_grub=/chromeOS/chromeOS.img.grub.txt|#txt_grub=//.img.grub.txt|### copy all text in the file, "img_name.img.grub.txt" <br/>### paste here below|
-做什么|什么都不做|小心填写路径；删除此处的`#`；给一类情况添加`#`|复制文本文件 "img_name.img.grub.txt" 中的所有文本并且粘贴到此处下方；给一类情况添加`#`
-#### 复制到 ESP 分区
-- 复制文件夹 `zip: EFI/brunch` 到 `ESP: \EFI`；
+```
+CASE=case_1.txt
+#CASE=case_2.txt
+#CASE=case_3.txt
+```
+这是一个转换器，
+- “CASE” 前无 “#” 则启用；
+- “CASE” 前有 “#” 则禁用；
+- 只允许一个 "CASE" 的前面没有 "#"。
+</details>
+
+##### case 1
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_1.txt`；
+<details>
+<summary>🖱️点击展开查看🖱️</summary>
+
+`txt_grub=/chromeOS/chromeOS.img.grub.txt`
+
+如果路径正确，就保持原样。
+</details>
+
+##### case 2
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_2.txt`；
+<details>
+<summary>🖱️点击展开查看🖱️</summary>
+
+```
+### For example,
+#####
+#txt_grub=/chromeos.img.grub.txt
+#txt_grub=/Users/username/brunch/chromeos.img.grub.txt
+#txt_grub=/brunch/chromeos.img.grub.txt
+```
+```
+txt_grub=//.img.grub.txt
+```
+
+若是其他路径，就认真填写路径；
+</details>
+
+##### case 3
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_3.txt`；
+<details>
+<summary>🖱️点击展开查看🖱️</summary>
+
+```
+### Copy all text in the file, "img_name.img.grub.txt",
+### Paste here below.
+### For examplle,
+```
+```
+menuentry "ChromeOS" --class "brunch" {
+	img_path=//.img
+	img_uuid=
+	search --no-floppy --set=root --file $img_path
+	loopback loop $img_path
+	source (loop,12)/efi/boot/settings.cfg
+	if [ -z $verbose ] -o [ $verbose -eq 0 ]; then
+		linux (loop,7)$kernel boot=local noresume noswap loglevel=7 options=$options chromeos_bootsplash=$chromeos_bootsplash $cmdline_params \
+			cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path \
+			console= vt.global_cursor_default=0 brunch_bootsplash=$brunch_bootsplash quiet
+	else
+		linux (loop,7)$kernel boot=local noresume noswap loglevel=7 options=$options chromeos_bootsplash=$chromeos_bootsplash $cmdline_params \
+			cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path
+	fi
+	initrd (loop,7)/lib/firmware/amd-ucode.img (loop,7)/lib/firmware/intel-ucode.img (loop,7)/initramfs.img
+}
+```
+```
+menuentry "ChromeOS (settings)" --class "brunch-settings" {
+	img_path=//.img
+	img_uuid=
+	search --no-floppy --set=root --file $img_path
+	loopback loop $img_path
+	source (loop,12)/efi/boot/settings.cfg
+	linux (loop,7)/kernel boot=local noresume noswap loglevel=7 options= chromeos_bootsplash= edit_brunch_config=1 \
+		cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path
+	initrd (loop,7)/lib/firmware/amd-ucode.img (loop,7)/lib/firmware/intel-ucode.img (loop,7)/initramfs.img
+}
+```
+
+其他情况，认真填写代码。
+</details>
 
 </details>
 
+#### 复制到 ESP 分区
+- 复制文件夹 `zip: EFI/brunch` 到 `ESP: \EFI`；
+
 ## 📝FAQ❓️
 ### Back to Yours
-这是 [Yours](https://github.com/M-L-P/Yours).
+这是 [Yours](https://github.com/M-L-P/Yours)。
 
 ## ⭐收藏🌟
 如果你喜欢并且期待未来的更新，你可以点亮星星。💫
 
 ## 🎉来源🎊
-- 几乎所有文件来自 [Brunch Framework](https://github.com/sebanc/brunch);
+- 几乎所有文件来自 [Brunch Framework](https://github.com/sebanc/brunch)；
