--- a/繁體中文.md
+++ b/繁體中文.md
@@ -2,7 +2,7 @@
 --|--|--|--
 
 # brunch-grub2
-這個是用來雙啟動甚，至多啟動 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
+這個是用來雙啟動,甚至多啟動 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
 #### 文件結構樹狀圖
 <img src="README/brunch-grub2.png">
 
@@ -28,28 +28,110 @@
 </details>
 
 ### 已經安裝好了
+#### 選擇 case
 <details>
 <summary>🖱️點擊展開查看🖱️</summary>
 
-#### 編輯 txt_grub.txt
-- 打開並編輯 `zip: EFI/brunch/txt_grub.txt` ；
+##### case.txt
+- 用文本編輯器打開 `zip: EFI/brunch/case.txt` ；
+<details>
+<summary>🖱️點擊展開查看🖱️</summary>
 
-三選一|一類情況|二類情況|三類情況
---|--|--|--
-條件|{如果文件在該目錄}|{如果文件在其他目錄}|{其他}
-代碼|txt_grub=/chromeOS/chromeOS.img.grub.txt|#txt_grub=//.img.grub.txt|### copy all text in the file, "img_name.img.grub.txt" <br/>### paste here below|
-做什麽|什麽都不做|小心填寫路徑；刪除此處的`#`；給一類情況添加`#`|復製文本文件 "img_name.img.grub.txt" 中的所有文本並且粘貼到此處下方；給一類情況添加`#`
-#### 復製到 ESP 分區
-- 復製文件夾 `zip: EFI/brunch` 到 `ESP: \EFI`；
+```
+CASE=case_1.txt
+#CASE=case_2.txt
+#CASE=case_3.txt
+```
+這是一個轉換器，
+- 「CASE」 前無 「#」 則啟用；
+- 「CASE」 前有 「#」 則禁用；
+- 只允許一個 "CASE" 的前面沒有 "#"。
+</details>
+
+##### case 1
+- 用文本編輯器打開 `zip: EFI/brunch/case/case_1.txt`；
+<details>
+<summary>🖱️點擊展開查看🖱️</summary>
+
+`txt_grub=/chromeOS/chromeOS.img.grub.txt`
+
+如果路徑正確，就保持原樣。
+</details>
+
+##### case 2
+- 用文本編輯器打開 `zip: EFI/brunch/case/case_2.txt`；
+<details>
+<summary>🖱️點擊展開查看🖱️</summary>
+
+```
+### For example,
+#####
+#txt_grub=/chromeos.img.grub.txt
+#txt_grub=/Users/username/brunch/chromeos.img.grub.txt
+#txt_grub=/brunch/chromeos.img.grub.txt
+```
+```
+txt_grub=//.img.grub.txt
+```
+
+若是其他路徑，就認真填寫路徑；
+</details>
+
+##### case 3
+- 用文本編輯器打開 `zip: EFI/brunch/case/case_3.txt`；
+<details>
+<summary>🖱️點擊展開查看🖱️</summary>
+
+```
+### Copy all text in the file, "img_name.img.grub.txt",
+### Paste here below.
+### For examplle,
+```
+```
+menuentry "ChromeOS" --class "brunch" {
+	img_path=//.img
+	img_uuid=
+	search --no-floppy --set=root --file $img_path
+	loopback loop $img_path
+	source (loop,12)/efi/boot/settings.cfg
+	if [ -z $verbose ] -o [ $verbose -eq 0 ]; then
+		linux (loop,7)$kernel boot=local noresume noswap loglevel=7 options=$options chromeos_bootsplash=$chromeos_bootsplash $cmdline_params \
+			cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path \
+			console= vt.global_cursor_default=0 brunch_bootsplash=$brunch_bootsplash quiet
+	else
+		linux (loop,7)$kernel boot=local noresume noswap loglevel=7 options=$options chromeos_bootsplash=$chromeos_bootsplash $cmdline_params \
+			cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path
+	fi
+	initrd (loop,7)/lib/firmware/amd-ucode.img (loop,7)/lib/firmware/intel-ucode.img (loop,7)/initramfs.img
+}
+```
+```
+menuentry "ChromeOS (settings)" --class "brunch-settings" {
+	img_path=//.img
+	img_uuid=
+	search --no-floppy --set=root --file $img_path
+	loopback loop $img_path
+	source (loop,12)/efi/boot/settings.cfg
+	linux (loop,7)/kernel boot=local noresume noswap loglevel=7 options= chromeos_bootsplash= edit_brunch_config=1 \
+		cros_secure cros_debug img_uuid=$img_uuid img_path=$img_path
+	initrd (loop,7)/lib/firmware/amd-ucode.img (loop,7)/lib/firmware/intel-ucode.img (loop,7)/initramfs.img
+}
+```
+
+其他情況，認真填寫代碼。
+</details>
 
 </details>
 
+#### 復製到 ESP 分區
+- 復製文件夾 `zip: EFI/brunch` 到 `ESP: \EFI`；
+
 ## 📝FAQ❓️
 ### Back to Yours
-這是 [Yours](https://github.com/M-L-P/Yours).
+這是 [Yours](https://github.com/M-L-P/Yours)。
 
 ## ⭐收藏🌟
 如果你喜歡並且期待未來的更新，你可以點亮星星。💫
 
 ## 🎉來源🎊
-- 幾乎所有文件來自 [Brunch Framework](https://github.com/sebanc/brunch);
+- 幾乎所有文件來自 [Brunch Framework](https://github.com/sebanc/brunch)；
