--- a/自述文件.md
+++ b/自述文件.md
@@ -43,9 +43,9 @@ CASE=case_1.txt
 #CASE=case_3.txt
 ```
 这是一个转换器，
-- “CASE” 前无 “#” 则启用；
-- “CASE” 前有 “#” 则禁用；
-- 只允许一个 "CASE" 的前面没有 "#"。
+- `CASE` 前无 `#` 则启用；
+- `CASE` 前有 `#` 则禁用；
+- 只允许一个 "CASE" 的前面没有 `#`。
 </details>
 
 ##### case 1
