--- a/繁體中文.md
+++ b/繁體中文.md
@@ -43,9 +43,9 @@ CASE=case_1.txt
 #CASE=case_3.txt
 ```
 這是一個轉換器，
-- 「CASE」 前無 「#」 則啟用；
-- 「CASE」 前有 「#」 則禁用；
-- 只允許一個 "CASE" 的前面沒有 "#"。
+- `CASE` 前無 `#` 則啟用；
+- `CASE` 前有 `#` 則禁用；
+- 只允許一個 "CASE" 的前面沒有 `#`。
 </details>
 
 ##### case 1
