--- a/繁體中文.md
+++ b/繁體中文.md
@@ -1,6 +1,10 @@
 [English](README.md)|[简体中文](自述文件.md)|[繁體中文](繁體中文.md)|...
 --|--|--|--
 
+![GitHub all releases](https://img.shields.io/github/downloads/M-L-P/brunch-grub2/total)
+![GitHub Repo stars](https://img.shields.io/github/stars/M-L-P/brunch-grub2?style=social)
+![GitHub Discussions](https://img.shields.io/github/discussions/M-L-P/brunch-grub2)
+
 # brunch-grub2
 這個是用來雙啟動,甚至多啟動 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
 #### 文件結構樹狀圖
@@ -88,7 +92,7 @@ txt_grub=//.img.grub.txt
 ### For examplle,
 ```
 ```
-menuentry "ChromeOS" --class "brunch" {
+menuentry "chromeOS" --class "brunch" {
 	img_path=//.img
 	img_uuid=
 	search --no-floppy --set=root --file $img_path
@@ -106,7 +110,7 @@ menuentry "ChromeOS" --class "brunch" {
 }
 ```
 ```
-menuentry "ChromeOS (settings)" --class "brunch-settings" {
+menuentry "chromeOS (settings)" --class "brunch-settings" {
 	img_path=//.img
 	img_uuid=
 	search --no-floppy --set=root --file $img_path
