--- a/自述文件.md
+++ b/自述文件.md
@@ -3,70 +3,70 @@
 [![GitHub Discussions](https://img.shields.io/github/discussions/M-L-P/brunch-grub2)](https://github.com/M-L-P/brunch-grub2/discussions)
 ![GitHub Repo stars](https://img.shields.io/github/stars/M-L-P/brunch-grub2?style=social)
 
-[English](../README.md)|[简体中文](自述文件.md)|[繁體中文](繁體中文.md)|...
+[English](README.md)|[简体中文](自述文件.md)|[繁體中文](繁體中文.md)|...
 --|--|--|--
 
 # brunch-grub2
-這個是用來雙啟動,甚至多啟動 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安裝在 非 chromebook 的 chromeOS。
-#### 文件結構樹狀圖
+这个是用来双启动,甚至多启动 那些借助 [Brunch 框架](https://github.com/sebanc/brunch) 安装在 非 chromebook 的 chromeOS。
+#### 文件结构树状图
 <img src="README/brunch-grub2.png">
 
-## 💻️預覽👀
+## 💻️预览👀
 
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 ![image](https://github.com/M-L-P/brunch-grub2/assets/69227436/ca96e382-f51a-4b53-bd83-b75cdfa363c8)<br/>
 </details>
 
 ## 🧭指南⬇️
-### 還沒安裝
+### 还没安装
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 #### 使用 Brunch 框架
-- 使用 [Brunch 框架](https://github.com/sebanc/brunch) 安裝 chromeOS；
+- 使用 [Brunch 框架](https://github.com/sebanc/brunch) 安装 chromeOS；
 - 在 `ext4: /chromeOS` 中生成 `chromeOS.img` ，
-- - `sudo bash chromeos-install.sh -src chromeos_filename.bin -dst .../[ext4_分區卷標]/chromeOS/chromeOS.img -s size`
-#### 復製到 ESP 分區
-- 復製文件夾 `zip: EFI/brunch` 到 `ESP: \EFI`；
+- - `sudo bash chromeos-install.sh -src chromeos_filename.bin -dst .../[ext4_分区卷标]/chromeOS/chromeOS.img -s size`
+#### 复制到 ESP 分区
+- 复制文件夹 `zip: EFI/brunch` 到 `ESP: \EFI`；
 </details>
 
-### 已經安裝好了
-#### 選擇 case
+### 已经安装好了
+#### 选择 case
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 ##### case.txt
-- 用文本編輯器打開 `zip: EFI/brunch/case.txt` ；
+- 用文本编辑器打开 `zip: EFI/brunch/case.txt` ；
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 ```
 CASE=case_1.txt
 #CASE=case_2.txt
 #CASE=case_3.txt
 ```
-這是一個轉換器，
-- `CASE` 前無 `#` 則啟用；
-- `CASE` 前有 `#` 則禁用；
-- 只允許一個 "CASE" 的前面沒有 `#`。
+这是一个转换器，
+- `CASE` 前无 `#` 则启用；
+- `CASE` 前有 `#` 则禁用；
+- 只允许一个 "CASE" 的前面没有 `#`。
 </details>
 
 ##### case 1
-- 用文本編輯器打開 `zip: EFI/brunch/case/case_1.txt`；
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_1.txt`；
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 `txt_grub=/chromeOS/chromeOS.img.grub.txt`
 
-如果路徑正確，就保持原樣。
+如果路径正确，就保持原样。
 </details>
 
 ##### case 2
-- 用文本編輯器打開 `zip: EFI/brunch/case/case_2.txt`；
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_2.txt`；
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 ```
 ### For example,
@@ -79,13 +79,13 @@ CASE=case_1.txt
 txt_grub=//.img.grub.txt
 ```
 
-若是其他路徑，就認真填寫路徑；
+若是其他路径，就认真填写路径；
 </details>
 
 ##### case 3
-- 用文本編輯器打開 `zip: EFI/brunch/case/case_3.txt`；
+- 用文本编辑器打开 `zip: EFI/brunch/case/case_3.txt`；
 <details>
-<summary>🖱️點擊展開查看🖱️</summary>
+<summary>🖱️点击展开查看🖱️</summary>
 
 ```
 ### Copy all text in the file, "img_name.img.grub.txt",
@@ -123,20 +123,20 @@ menuentry "chromeOS (settings)" --class "brunch-settings" {
 }
 ```
 
-其他情況，認真填寫代碼。
+其他情况，认真填写代码。
 </details>
 
 </details>
 
-#### 復製到 ESP 分區
-- 復製文件夾 `zip: EFI/brunch` 到 `ESP: \EFI`；
+#### 复制到 ESP 分区
+- 复制文件夹 `zip: EFI/brunch` 到 `ESP: \EFI`；
 
 ## 📝FAQ❓️
 ### Back to Yours
-這是 [Yours](https://github.com/M-L-P/Yours)。
+这是 [Yours](https://github.com/M-L-P/Yours)。
 
 ## ⭐收藏🌟
-如果你喜歡並且期待未來的更新，你可以點亮星星。💫
+如果你喜欢并且期待未来的更新，你可以点亮星星。💫
 
-## 🎉來源🎊
-- 幾乎所有文件來自 [Brunch Framework](https://github.com/sebanc/brunch)；
+## 🎉来源🎊
+- 几乎所有文件来自 [Brunch Framework](https://github.com/sebanc/brunch)；
